<resources>
    <string name="app_name">MVP Fly Collab</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="the_fly_collab_community_is_here_for_your_journey.">The Fly Collab Community is here for your journey</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_and_typesetting_industry_lorem_ipsum_has_been_the_industry_s_standard_dummy_text_ever_since_the_1500s_when_an_unknown_printer_took_a_galley_of_type_and_scrambled_it_to_make_a_type_specimen_book_it_has_survived_not_only_five_centuries_but_also_the_leap_into_electronic_typesetting_remaining_essentially_unchanged_it_was_popularised_in_the_1960s_with_the_release_of_letraset_sheets_containing_lorem_ipsum_passages_and_more_recently_with_desktop">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop</string>

    <string name="title_activity_playlist_itemview">PlaylistItemview</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="activity_schedule">Activity Schedule</string>
    <string name="waqas_schedule">Waqas schedule</string>
    <string name="about_me">About Me</string>
    <string name="www_sitename_com">www.sitename.com</string>
    <string name="add_a_journey_photo">Add a Journey Photo</string>
    <string name="add_activity_to_calendar">Add Activity to Calendar</string>
    <string name="add_a_playlist_video">Add a Playlist Video</string>
    <string name="calendar">Calendar</string>
    <string name="chat">Chat</string>
    <string name="comments">Comments</string>
    <string name="home">Home</string>
    <string name="likes">Likes</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Sign In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="or">OR</string>
    <string name="google">Google</string>
    <string name="facebook">Facebook</string>
    <string name="log_in">Log In</string>
    <string name="welcome">Welcome!</string>
    <string name="continue_with_gmail">Continue With Gmail</string>
    <string name="continue_with_facebook">Continue With Facebook</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="profile">PROFILE</string>
    <string name="profile_small">Profile</string>
    <string name="journey">JOURNEY</string>
    <string name="journey_small">Journey</string>
    <string name="playlist">PLAYLIST</string>
    <string name="playlist_small">Playlist</string>
    <string name="collab">COLLAB</string>
    <string name="collab_small">Collab</string>
    <string name="joshua_l">joshua_l</string>
    <string name="_8m">8m</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="full_name">Full Name</string>
    <string name="add_new_journey">Add New Journey</string>
    <string name="creat_journey">Create Journey</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="abdul_activity">Abdul Activity</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_eu_laoreet_ut_nam_tortor_a_interdum_pharetra_est_gravida_pharetra_lacus_lectus_risus_adipiscing">Lorem ipsum dolor sit amet consectetur. Eu laoreet ut nam tortor a interdum pharetra est. Gravida pharetra lacus lectus risus adipiscing.</string>
    <string name="add_this_activity_to_my_calendar">Add this activity to my calendar</string>
    <string name="add_new_playlist">Add New Playlist</string>
    <string name="add_title_photo">+Add Title Photo</string>
    <string name="search">Search</string>
    <string name="sent">Sent</string>
    <string name="start_from_screen_16">Start from screen 16</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_donec_felis_sit_in_urna_suspendisse_sed_felis_mattis_et_eleifend_tristique_vitae_odio_purus_et_facilisis_quam_sit_semper_sed_cursus_molestie_cras_sed_enim_sit_sit_morbi_quis_ac_enim_placerat_euismod_orci_faucibus">Lorem ipsum dolor sit amet consectetur. Donec felis sit in urna. Suspendisse sed felis mattis et eleifend tristique vitae odio purus. Et facilisis quam sit semper sed cursus molestie cras. Sed enim sit sit morbi quis ac enim placerat. Euismod orci faucibus.</string>
    <string name="girl_girls_babygirl_girlswholift_polishgirl_girlboss_girly_girl_girls_babygirl_girlswholift_polishgirl_girlboss_girly_girl_girls_babygirl_girlswholift_polishgirl_girlboss_girly">#girl # girls #babygirl #girlswholift #polishgirl #girlboss #girly #girl # girls #babygirl #girlswholift #polishgirl #girlboss #girly #girl # girls #babygirl #girlswholift #polishgirl #girlboss #girly</string>
    <string name="_6_hours_ago">6 hours ago</string>
    <string name="_44_389">44,389</string>
    <string name="_26_376">26,376</string>
    <string name="change_profilephoto">Change Profile Photo</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="update_password">Update Password</string>
    <string name="joshua_l_the_game_in_japan_was_amazing_and_i_want_to_share_some_photos">joshua_l The game in Japan was amazing and I want to share some photos</string>
    <string name="hello_how_are_you">Hello!How are you?</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="login_with_gmail">Login with Gmail</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up_to_get_started">Sign up to get started</string>
    <string name="add_profile_image">Add Profile Image</string>
    <string name="add_some_interest">Add some interests</string>
    <string name="pick_your_favorite_topics">Pick your favorite topics to set up your feeds</string>
    <string name="add_event">Add event</string>
    <string name="event_name">Event Name</string>
    <string name="type_the_note_here">Type the note here</string>
    <string name="date">Date</string>
    <string name="_09_00am">09:00am</string>
    <string name="_12_00pm">12:00pm</string>
    <string name="add_new_video_and_image">+ Add new video and image</string>
    <string name="create_activity">Create Activity</string>
    <string name="go_back">Go Back</string>
    <string name="add_new_journey_image">Add New Journey Image</string>
    <string name="save">Save</string>
    <string name="menu">Menu</string>
    <string name="share_us">Share Us</string>
    <string name="rate_us">Rate Us</string>
    <string name="logout">Logout</string>
    <string name="close_menu_items">Close menu items</string>
    <string name="feed">Feed</string>
    <string name="add_post">Add Post</string>
    <string name="save_post">Save Post</string>
    <string name="no_data_found">No data found</string>
    <string name="dummy">---</string>
    <string name="add_journey_details">Add journey details</string>
    <string name="add_new_image">+ Add New Image</string>
    <string name="add_play_list">Add Play List</string>
    <string name="create_playlist">Create Playlist</string>
    <string name="add_playlist_details">Add playlist details</string>
    <string name="add_new_video">+ Add new video</string>
    <string name="add_new_playlist_video">Add New Playlist Video</string>
    <string name="levels">Levels</string>
    <string name="added_image">Added image</string>
    <string name="add_image">+ Add Image</string>
    <string name="add_video">+ Add Video</string>
    <string name="play_list_thumbnail">Play List Thumbnail</string>
    <string name="play">Play</string>
    <string name="create_post">Create Post</string>
    <string name="follow">Follow</string>
    <string name="no_post_found">No post found</string>
    <string name="discover_people">Discover people</string>
    <string name="image_preview">Image preview</string>
    <string name="profile_posts">Profile Posts</string>
    <string name="playlist_">Playlist</string>
    <string name="following">Following</string>
    <string name="posts">Posts</string>
    <string name="comment">Comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="no_comments_yet">No comments yet</string>
    <string name="shared_content">Shared Content</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="update">Update</string>
    <string name="requests">Requests</string>
    <string name="collaborators">Collaborators</string>
    <string name="collaborate">Collaborate</string>
    <string name="notification">Notification</string>
    <string name="activity">Activity</string>
    <string name="wants_to_follow_you">wants to follow you</string>
    <string name="wants_to_collaborate_with_you">wants to collaborate with you</string>
    <string name="confirm">Confirm</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="suggested_people">Suggested people</string>
    <string name="collaborating">Collaborating</string>
    <string name="saved">Saved</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="followers">Followers</string>
    <string name="people">People</string>
    <string name="google_maps_key">AIzaSyAnxKP2t1MupyAcsRd0nu5wi05ijy-YOJQ</string>
    <string name="message">Message</string>
    <string name="messages">Messages</string>
    <string name="get_started">Get Started</string>
    <string name="chats_will_appear_here">Chats will appear here after you send or receive a message</string>
    <string name="location">Location</string>
    <string name="no_one_is_online_at_the_moment">No one is online at the moment.</string>
    <string name="add_chat">Add Chat</string>

    <string name="channel_name">FlyCollab</string>
    <string name="channel_description">This is about collab.</string>
    <string name="no_following_requests">No following requests</string>
    <string name="no_collaborating_requests">No collaborating requests</string>
    <string name="please_select_start_time">Please select start time</string>
</resources>