<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <!-- Bottom Sheet -->
    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/add_new_playlist"
            android:textAlignment="center"
            android:textColor="#222B45"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/title"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <EditText
            android:id="@+id/etDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/edittext_shape"
            android:gravity="top"
            android:hint="@string/description"
            android:minLines="3"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvAddImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:text="@string/add_title_photo"
            android:textColor="@color/add_media_color"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:id="@+id/ivPlayImg"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:backgroundTint="@color/purple"
            android:text="@string/create_playlist"
            android:textSize="@dimen/_14sdp"
            app:cornerRadius="@dimen/_5sdp" />
    </LinearLayout>
</ScrollView>