<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/bottomSheet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_shape"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="100dp">


        <TextView
            android:id="@+id/tvActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/lato_bold"
            android:layout_gravity="center_horizontal"
            android:text="@string/add_new_journey_image"
            android:textColor="#222B45"
            android:textSize="18sp" />


        <EditText
            android:id="@+id/etEventName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/edittext_shape"
            android:fontFamily="@font/lato"
            android:hint="@string/event_name"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:inputType="text"/>

        <EditText
            android:id="@+id/etEventDes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/edittext_shape"
            android:gravity="top"
            android:hint="@string/description"
            android:minLines="3"
            android:padding="@dimen/_15sdp"
            android:textColor="@color/black"
            android:textSize="16sp" />


        <TextView
            android:id="@+id/tvDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:background="@drawable/edittext_shape"
            android:hint="@string/date"
            android:padding="@dimen/_15sdp"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/ic_calendar_gray" />


        <TextView
            android:id="@+id/tvNewImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:text="@string/add_new_image"
            android:textSize="14sp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/purple" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvJourneyDetailsImages"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"/>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddJourneyDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:backgroundTint="@color/purple"
            android:fontFamily="@font/lato_bold"
            android:padding="@dimen/_15sdp"
            android:text="@string/add_journey_details"
            android:textSize="16sp"
            app:cornerRadius="@dimen/_5sdp" />
    </LinearLayout>
</ScrollView>